# InfraMon

./: .editorconfig  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  InfraMon.code-workspace  Makefile  README.md  backup.sh  deploy.sh  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  podman-compose.yml
backend/: .flake8  .gitignore  Dockerfile  alembic.ini  debug_compose.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 000000000000_empty_migration.py  001_initial_schema.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py  auth.py  router.py  users.py
backend/app/core/: __init__.py  auth.py  config.py  exceptions.py  middleware.py  security.py
backend/app/db/: __init__.py  base.py  container_repository.py  database.py  repository.py  user_repository.py
backend/app/models/: __init__.py  audit_log.py  container.py  container_group.py  container_stats.py  docker_compose_project.py  system_stats.py  user.py
backend/app/schemas/: __init__.py  container.py  docker_compose.py  response.py  stats.py  user.py
backend/app/services/: __init__.py  auth_service.py  container_service.py  docker_service.py  metrics_collector.py  stats_service.py
backend/scripts/: __init__.py  backup_db.py  init_db.py
backend/tests/: conftest.py  factories.py
backend/tests/unit/: test_api_auth.py  test_api_containers.py  test_api_groups.py  test_api_stats.py  test_api_users.py  test_container_service.py  test_core_auth.py  test_core_exceptions.py  test_core_middleware.py  test_core_security.py  test_docker_service_full.py  test_main.py  test_repositories.py  test_services.py  test_stats_service_full.py
docs/: ARCHITECTURE.md  DEPLOYMENT.md  (+1 more)
(+88 files in other folders)
